[package]
name = "datatypes"
version = "0.1.0"
authors = ["Ole Martin Ruud <barskern@outlook.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
